--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,7 +1,7 @@
 .container {
   font-family: 'Montserrat', sans-serif;
 
-  max-width: 1440px;
+  // max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
 }
