--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -26,6 +26,7 @@
   padding-top: 24px;
   padding-bottom: 22px;
   background-image: url('./rectangle8.svg');
+
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -53,7 +54,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
-  line-height: 142%;
+  line-height: 28px;
   padding-bottom: 32px;
 }
 
@@ -63,9 +64,11 @@
   padding-bottom: 17px;
   padding-left: 32px;
   padding-right: 32px;
-
+  font-size: 16px;
+  line-height: 23px;
   cursor: pointer;
   background: #ffffff;
+  color: #3a80ba;
   border-radius: 8px;
 }
 
@@ -73,4 +76,117 @@
   // position: absolute;
   // top: 72px;
   // right: 209px;
+}
+
+.features {
+  text-align: center;
+  padding-top: 16px;
+  padding-bottom: 128px;
+  padding-left: 130px;
+  padding-right: 130px;
+  .features-title {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 24px;
+    max-width: 580px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 32px;
+    line-height: 39px;
+    color: #1a1a1a;
+    span {
+      font-weight: bold;
+    }
+  }
+  .features-description {
+    padding-bottom: 40px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 28px;
+
+    color: #7e7e7e;
+  }
+}
+
+.features-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.features-list-item {
+  max-width: 380px;
+  margin-bottom: 20px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 32px;
+  padding-right: 32px;
+
+  // max-height: 323px;
+  background: #ffffff;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.16);
+  border-radius: 32px;
+}
+.features-list-item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.features-list-item-image {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+}
+
+.features-list-item-title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  // text-align: center;
+  margin-bottom: 16px;
+  color: #1a1a1a;
+}
+
+.features-list-item-description {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 23px;
+
+  text-align: center;
+
+  color: #7e7e7e;
+}
+
+.footer {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 30px;
+  padding-left: 130px;
+  padding-right: 130px;
+
+  background: linear-gradient(90.74deg, #255d8b 1.6%, #3a80ba 96.44%);
+}
+.footer.users {
+  padding-top: 14px;
+  padding-bottom: 14px;
+  background: #1c3b55;
+}
+.footer-logo {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 39px;
+  color: #ffffff;
+}
+
+.footer-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 23px;
+  color: #ffffff;
 }
