added some table and pagination styles

--- a/src/components/SubscribeForm/SubscribeForm.scss
+++ b/src/components/SubscribeForm/SubscribeForm.scss
@@ -2,9 +2,9 @@ form {
   display: flex;
   justify-content: center;
   padding-bottom: 24px;
-  background-image: url('./footer-backgroundsvg.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  // background-image: url('./footer-backgroundsvg.svg');
+  // background-repeat: no-repeat;
+  // background-size: cover;
 
   input {
     width: 579px;
