--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,13 +1,13 @@
-.container {
+.my-container {
   font-family: 'Montserrat', sans-serif;
 
-  // max-width: 1440px;
+  max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
 }
 
 @media screen and (min-width: 768px) {
-  .container {
+  .my-container {
     // max-width: 768px;
     // padding-left: 30px;
     // padding-right: 30px;
@@ -15,7 +15,7 @@
 }
 
 @media screen and (min-width: 1200px) {
-  .container {
+  .my-container {
     // max-width: 1200px;
     // padding-left: 130px;
     // padding-right: 130px;
@@ -23,7 +23,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .container {
+  .my-container {
     // max-width: 480px;
     // padding-left: 15px;
     // padding-right: 15px;
