--- a/src/components/UsersTable/UsersTable.scss
+++ b/src/components/UsersTable/UsersTable.scss
@@ -1,13 +1,90 @@
+// @import '~bootstrap/scss/bootstrap.scss';
+.table-container {
+  max-width: 1180px;
+  overflow: scroll;
+}
+
 table {
-  display: block;
-  width: 100%;
+  width: 1180px;
+  // display: table;
+
+  // max-width: 1180px;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
+  border-collapse: collapse;
+  background-color: #fbfbfb;
+  border-radius: 1em;
+  overflow: hidden;
+
+  // text-align: center;
 }
 
 table th,
 table td {
-  padding: 10px;
-  border: 1px solid #2a2a2a;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-left: 24px;
+  padding-right: 24px;
+  border: 1px solid #ffffff;
+}
+
+table {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+
+  color: #1a1a1a;
+  .table-head-titles {
+    font-weight: normal;
+    color: #ffffff;
+    background: #3a80ba;
+  }
+}
+
+.table__line:nth-child(even) {
+  background-color: #f1f1f1;
+  // border: 1px solid #e4e4e4;
+}
+.table__line {
+  cursor: pointer;
+}
+
+.pagination {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  display: flex;
+  justify-content: center;
+}
+
+.page-item {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  width: 48px;
+  height: 48px;
+
+  text-align: center;
+
+  color: #1a1a1a;
+  border: 2px solid #f1f1f1;
+  border-radius: 8px;
+}
+
+.page-link-active {
+  color: #ffffff;
+  background: #3a80ba;
+  border: 2px solid #3a80ba;
+}
+
+.page-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-left: 21px;
+  padding-right: 21px;
+  cursor: pointer;
 }
