--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,6 +1,6 @@
 .my-container {
   font-family: 'Montserrat', sans-serif;
-
+  // position: relative;
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
