--- a/src/components/UserСhart/UserChart.scss
+++ b/src/components/UserСhart/UserChart.scss
@@ -1,4 +1,64 @@
-.chart {
-  //   height: 200px;
-  margin-bottom: 30px;
+.name {
+  margin-top: 24px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 39px;
+  /* identical to box height */
+
+  color: #1a1a1a;
+}
+
+.name-date-wrapper {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  // flex-wrap: wrap;
+}
+
+.my-datepicker-wrapper {
+  display: inline-flex;
+  // justify-content: space-between;
+  // flex-grow: 1;
+  // margin-left: auto;
+
+  // justify-content: space-between;
+  .datepicker-text {
+    width: 100%;
+    display: inline-flex;
+    align-items: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    /* identical to box height */
+
+    color: #444444;
+  }
+  .datepicker-text::after {
+    content: '';
+    display: block;
+    width: 100%;
+    margin-left: 8px;
+    margin-right: 10px;
+    width: 26px;
+    height: 26px;
+
+    background-color: #3a80ba;
+    border-radius: 3px;
+
+    background-image: url('./calendar.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+.chart-title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+
+  margin-bottom: 24px;
+  margin-top: 24px;
+  color: #1a1a1a;
 }
