--- a/src/components/SubscribeForm/SubscribeForm.scss
+++ b/src/components/SubscribeForm/SubscribeForm.scss
@@ -2,12 +2,9 @@ form {
   display: flex;
   justify-content: center;
   padding-bottom: 24px;
-  // background-image: url('./footer-backgroundsvg.svg');
-  // background-repeat: no-repeat;
-  // background-size: cover;
 
   input {
-    width: 579px;
+    width: 576px;
     padding-left: 19px;
     padding-top: 19px;
     padding-bottom: 19px;
@@ -19,6 +16,9 @@ form {
     border: 1px solid #f1f1f1;
     box-sizing: border-box;
     border-radius: 10px;
+    @media screen and (max-width: 767px) {
+      width: 100%;
+    }
   }
 
   .form-wrapper {
@@ -41,5 +41,12 @@ form {
     color: #ffffff;
     background: #3a80ba;
     border-radius: 8px;
+    cursor: pointer;
+    @media screen and (max-width: 767px) {
+      position: static;
+      margin-top: 10px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 }
