--- a/src/components/UsersTable/UsersTable.scss
+++ b/src/components/UsersTable/UsersTable.scss
@@ -9,17 +9,12 @@
 
 table {
   width: 1180px;
-  // display: table;
-
-  // max-width: 1180px;
   margin-left: auto;
   margin-right: auto;
   border-collapse: collapse;
   background-color: #fbfbfb;
   border-radius: 1em;
   overflow: hidden;
-
-  // text-align: center;
 }
 
 table th,
@@ -48,9 +43,11 @@ table {
   background-color: #f1f1f1;
   // border: 1px solid #e4e4e4;
 }
+
 .table__line {
   cursor: pointer;
 }
+
 .table__line:hover,
 .table__line:focus {
   background-color: #dbefff;
@@ -62,6 +59,10 @@ table {
   padding-bottom: 24px;
   display: flex;
   justify-content: center;
+  @media screen and (max-width: 768px) {
+    display: inline-flex;
+    flex-wrap: wrap;
+  }
 }
 
 .page-item {
@@ -112,14 +113,11 @@ table {
     padding-bottom: 24px;
     cursor: pointer;
   }
-  // background-size: cover;
 }
 
 .next {
   margin-left: 16px;
-  // width: 24px;
-  // // display: flex;
-  // // justify-content: center;
+
   display: flex;
   align-items: center;
   width: 24px;
@@ -135,7 +133,6 @@ table {
     padding-bottom: 24px;
     cursor: pointer;
   }
-  // background-size: cover;
 }
 
 .break-me {
@@ -144,7 +141,6 @@ table {
   margin-right: 8px;
 
   a {
-    // display: block;
     padding-left: 12px;
     padding-right: 12px;
     padding-top: 12px;
