--- a/src/components/UserСhart/UserChart.scss
+++ b/src/components/UserСhart/UserChart.scss
@@ -4,25 +4,32 @@
   font-weight: bold;
   font-size: 32px;
   line-height: 39px;
-  /* identical to box height */
 
   color: #1a1a1a;
+  @media screen and (max-width: 768px) {
+    font-size: 20px;
+    line-height: 23px;
+  }
+}
+
+.react-datepicker {
+  display: flex;
+  width: 100%;
 }
 
 .name-date-wrapper {
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  // flex-wrap: wrap;
 }
 
 .my-datepicker-wrapper {
   display: inline-flex;
-  // justify-content: space-between;
-  // flex-grow: 1;
-  // margin-left: auto;
+  @media screen and (max-width: 768px) {
+    flex-wrap: wrap;
+    margin-left: 20px;
+  }
 
-  // justify-content: space-between;
   .datepicker-text {
     width: 100%;
     display: inline-flex;
@@ -31,10 +38,13 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 17px;
-    /* identical to box height */
 
     color: #444444;
+    @media screen and (max-width: 768px) {
+      margin-bottom: 5px;
+    }
   }
+
   .datepicker-text::after {
     content: '';
     display: block;
@@ -52,6 +62,7 @@
     background-position: center;
   }
 }
+
 .chart-title {
   font-style: normal;
   font-weight: bold;
